# sfz-filters-experimental

./: CMakeLists.txt  faustgen.sh
demo/: MainWindow.ui  demo.cpp
dsp/: filters_modulable.dsp  sfz_filters.dsp
src/: SfzFilter.cpp  SfzFilter.h  SfzFilterDefs.h  SfzFilterImpls.cxx
